--- a/caas-app/src/main/resources/help/prosody/xep0398.md
+++ b/caas-app/src/main/resources/help/prosody/xep0398.md
@@ -2,7 +2,7 @@
 ### WARNING: These instructions are incomplete
 ---
 * Make sure your server has v0.9+
-* Add the community module [profile](https://modules.prosody.im/mod_profile).https://modules.prosody.im/mod_profile
+* Add the community module [profile](https://modules.prosody.im/mod_profile)
 * Follow the instructions in the [module's page](https://modules.prosody.im/mod_profile)
 
 Note: This module does not come with default prosody installation.
