Improved help for ejabberd

--- a/caas-web/src/main/resources/help/ejabberd/xep0384.md
+++ b/caas-web/src/main/resources/help/ejabberd/xep0384.md
@@ -9,3 +9,9 @@ modules:
         plugins:
             - "pep"
 ```
+* Remove/comment these lines to enable OMEMO by default
+```
+force_node_config:
+  ## "eu.siacs.conversations.axolotl.*":
+  ##  access_model: whitelist
+```
