Improvements to help files

--- a/caas-web/src/main/resources/help/ejabberd/xep0077.md
+++ b/caas-web/src/main/resources/help/ejabberd/xep0077.md
@@ -1,3 +1,4 @@
+#### Enable it only if you want anyone to create an account directly from a client
 * Make sure your server is v0.1+
 * Add mod_register to modules list
 
@@ -9,4 +10,10 @@ modules:
         access_from: allow
         access: register
 ```
-* Make sure you have allowed registration from the internet: <p style='color: #f22;'>WARNING: You may not want to enable it as this may allow anyone to create an account on your server from devices from internet.
+* Set the access rules for register to allow, if you want to allow anyone to make an account
+```
+access_rules:
+  register:
+    - allow
+```
+* Read more on [mod\_register](https://docs.ejabberd.im/admin/configuration/#mod-register) configuration.
