--- a/caas-web/src/main/resources/help/openfire/xep0065.md
+++ b/caas-web/src/main/resources/help/openfire/xep0065.md
@@ -1,2 +1,1 @@
-* Make sure your server is v4.3.0+
-* (These instructions are not valid) The non-empty email address for any admin user is exposed as an 'admin' contact.
+<p style="color:red;">Not supported</p>
