help/prosody: Update Prosody help files

--- a/caas-web/src/main/resources/help/prosody/xep0065.md
+++ b/caas-web/src/main/resources/help/prosody/xep0065.md
@@ -1,2 +1,4 @@
 * Make sure your server is v0.7+
-* Enable the core module proxy65
+* Enable the core module [mod\_proxy65](https://prosody.im/doc/modules/mod_proxy65)
+* If your proxy is not located directly as a subdomain of the server's primary
+domain, you should add a [disco\_items option](https://prosody.im/doc/modules/mod_disco).
