--- a/caas-web/src/main/resources/help/prosody/xep0077.md
+++ b/caas-web/src/main/resources/help/prosody/xep0077.md
@@ -1,2 +1,2 @@
-* Add core module register.
-* Set allow\_registration=true in configuration file
+* Add core module [mod\_register](https://prosody.im/doc/modules/mod_register)
+* Set allow\_registration=true in configuration file to allow users to create accounts on your server
