--- a/caas-web/src/main/resources/help/prosody/xep0191.md
+++ b/caas-web/src/main/resources/help/prosody/xep0191.md
@@ -1,2 +1,2 @@
-* Make sure your server is v0.7+
-* Enable the core module [blocking](https://modules.prosody.im/mod_blocking.html)
+* Make sure your server is v0.10+ and enable the core module [mod\_blocklist](https://prosody.im/doc/modules/mod_blocklist)
+* If you have an older version of Prosody (v0.7+), enable the community module [mod\_blocking](https://modules.prosody.im/mod_blocking.html)
