--- a/caas-web/src/main/resources/help/prosody/xep0198.md
+++ b/caas-web/src/main/resources/help/prosody/xep0198.md
@@ -1,2 +1,6 @@
 * Make sure your server is v0.8+
-* Enable the core module [smacks](https://modules.prosody.im/mod_smacks)
+* Enable the community module [mod\_smacks](https://modules.prosody.im/mod_smacks)
+
+Note: This module does not come with default prosody installation.
+However, it can be set up by adding a community module.
+To learn about how to install a community module, go to [installing modules documentation](https://prosody.im/doc/installing_modules)
