--- a/caas-web/src/main/resources/help/prosody/xep0280.md
+++ b/caas-web/src/main/resources/help/prosody/xep0280.md
@@ -1,2 +1,2 @@
-* Make sure your server is v0.10+
-* Enable the core module [carbons](https://modules.prosody.im/mod_carbons)
+* Make sure your server is v0.10+ and enable the core module [mod\_carbons](https://modules.prosody.im/mod_carbons)
+* Older versions of Prosody (v0.8+) may use the community [mod\_carbons](https://modules.prosody.im/mod_carbons.html)
