--- a/caas-web/src/main/resources/help/prosody/xep0313.md
+++ b/caas-web/src/main/resources/help/prosody/xep0313.md
@@ -1,2 +1,2 @@
 * Make sure your server is v0.10+
-* Enable the core module [mam](https://modules.prosody.im/mod_mam) 
+* Enable the core module [mod\_mam](https://modules.prosody.im/mod_mam)
