--- a/caas-web/src/main/resources/help/prosody/xep0357.md
+++ b/caas-web/src/main/resources/help/prosody/xep0357.md
@@ -1,5 +1,5 @@
 * Make sure your server has v0.9+
-* Add the community module [cloud\_notify](https://modules.prosody.im/mod_cloud_notify).
+* Add the community module [mod\_cloud\_notify](https://modules.prosody.im/mod_cloud_notify).
 
 Note: This module does not come with default prosody installation.
 However, it can be set up by adding a community module.
