--- a/caas-web/src/main/resources/help/prosody/xep0368.md
+++ b/caas-web/src/main/resources/help/prosody/xep0368.md
@@ -1,1 +1,2 @@
-* Go to [Prosody DNS documentation](https://prosody.im/doc/dns)
+* Set legacy_ssl_ports = { 5223 } (or choose another port) in your config file, above any VirtualHost or Component definitions
+* Add `_xmpps-client._tcp` SRV records to your DNS for this port, see [Prosody DNS documentation](https://prosody.im/doc/dns)
