--- a/caas-web/src/main/resources/help/prosody/xep0384.md
+++ b/caas-web/src/main/resources/help/prosody/xep0384.md
@@ -1,5 +1,5 @@
 * Make sure your server has v0.10+
-* Add the community module [omemo\_all\_access](https://modules.prosody.im/mod_omemo_all_access).
+* Add the community module [mod\_omemo\_all\_access](https://modules.prosody.im/mod_omemo_all_access).
 
 Note: This module does not come with default prosody installation.
 However, it can be set up by adding a community module.
