--- a/caas-web/src/main/resources/help/prosody/xep0398.md
+++ b/caas-web/src/main/resources/help/prosody/xep0398.md
@@ -1,9 +1,5 @@
----
-### WARNING: These instructions are incomplete
----
-* Make sure your server has v0.9+
-* Add the community module [profile](https://modules.prosody.im/mod_profile)
-* Follow the instructions in the [module's page](https://modules.prosody.im/mod_profile)
+* Not currently supported in a released version of Prosody
+* trunk/v0.11 (unreleased): Enable the community module [mod\_profile](https://modules.prosody.im/mod_profile)
 
 Note: This module does not come with default prosody installation.
 However, it can be set up by adding a community module.
