--- a/caas-web/src/main/resources/help/prosody/xep0163.md
+++ b/caas-web/src/main/resources/help/prosody/xep0163.md
@@ -1,2 +1,3 @@
 * Make sure your server is v0.5+
-* Enable the core module pep.
+* Enable the core module [mod\_pep](https://prosody.im/doc/modules/mod_pep)	
+.
