--- a/caas-web/src/main/resources/help/prosody/xep0352.md
+++ b/caas-web/src/main/resources/help/prosody/xep0352.md
@@ -1,5 +1,5 @@
- * Make sure your server has v0.9+
-* Add the community module [csi](https://modules.prosody.im/mod_csi).
+* Make sure your server has v0.9+
+* Add the community module [mod\_csi](https://modules.prosody.im/mod_csi).
 
 Note: This module does not come with default prosody installation.
 However, it can be set up by adding a community module.
