--- a/caas-web/src/main/resources/help/prosody/xep0363.md
+++ b/caas-web/src/main/resources/help/prosody/xep0363.md
@@ -1,6 +1,6 @@
 * Make sure your server has v0.9+
-* Add the community module [http\_upload](https://modules.prosody.im/mod_http_upload)
-* Follow the instructions from the [module's link](https://modules.prosody.im/mod_http_upload) to set up HTTP upload server
+* Add the community module [mod\_http\_upload](https://modules.prosody.im/mod_http_upload) or [mod\_http\_upload\_external](https://modules.prosody.im/mod_http_upload_external.html)
+* Follow the instructions from the module documentation to set up HTTP upload server
 
 Note: This module does not come with default prosody installation.
 However, it can be set up by adding a community module.
