correctly reference mod_client_state for ejabberd

--- a/caas-web/src/main/resources/help/ejabberd/xep0352.md
+++ b/caas-web/src/main/resources/help/ejabberd/xep0352.md
@@ -1,6 +1,6 @@
-* Add mod\_csi to modules list
+* Add mod\_client\_state to modules list
 ```
 modules:
     ...
-    mod_csi: {}
+    mod_client_state: {}
 ```
