updated some of the prosody help files for Prosody 0.11

--- a/caas-web/src/main/resources/help/prosody/xep0384.md
+++ b/caas-web/src/main/resources/help/prosody/xep0384.md
@@ -1,6 +1,5 @@
-* Make sure your server has v0.10+
-* Add the community module [mod\_omemo\_all\_access](https://modules.prosody.im/mod_omemo_all_access).
-
-Note: This module does not come with default prosody installation.
-However, it can be set up by adding a community module.
-To learn about how to install a community module, go to [installing modules documentation](https://prosody.im/doc/installing_modules)
+* Prosody 0.11
+ - Support is included in `mod_pep`
+* Prosody 0.10
+ - Add the community module [mod\_omemo\_all\_access](https://modules.prosody.im/mod_omemo_all_access).
+ - To learn about how to install a community module, go to [installing modules documentation](https://prosody.im/doc/installing_modules)
