--- a/caas-web/src/main/resources/help/prosody/xep0398.md
+++ b/caas-web/src/main/resources/help/prosody/xep0398.md
@@ -1,6 +1,2 @@
-* Not currently supported in a released version of Prosody
-* trunk/v0.11 (unreleased): Enable the community module [mod\_profile](https://modules.prosody.im/mod_profile)
-
-Note: This module does not come with default prosody installation.
-However, it can be set up by adding a community module.
-To learn about how to install a community module, go to [installing modules documentation](https://prosody.im/doc/installing_modules)
+* Upgrade to Prosody 0.11
+* Enable the module [mod\_vcard\_legacy](https://prosody.im/doc/modules/mod_vcard_legacy)
