updated some prosody help files to the best of my knowledge

--- a/caas-web/src/main/resources/help/prosody/xep0384.md
+++ b/caas-web/src/main/resources/help/prosody/xep0384.md
@@ -1,5 +1,5 @@
 * Prosody 0.11
- - Support is included in `mod_pep`
+  * Support is included in `mod_pep`
 * Prosody 0.10
- - Add the community module [mod\_omemo\_all\_access](https://modules.prosody.im/mod_omemo_all_access).
- - To learn about how to install a community module, go to [installing modules documentation](https://prosody.im/doc/installing_modules)
+  * Add the community module [mod\_omemo\_all\_access](https://modules.prosody.im/mod_omemo_all_access).
+  * To learn about how to install a community module, go to [installing modules documentation](https://prosody.im/doc/installing_modules)
