--- a/caas-web/src/main/resources/help/ejabberd/xep0384.md
+++ b/caas-web/src/main/resources/help/ejabberd/xep0384.md
@@ -9,9 +9,9 @@ modules:
         plugins:
             - "pep"
 ```
-* Remove/comment these lines to enable OMEMO by default
+* Change from "whitelist" to "open" to enable OMEMO support
 ```
-force_node_config:
-  ## "eu.siacs.conversations.axolotl.*":
-  ##  access_model: whitelist
+        force_node_config:
+          "eu.siacs.conversations.axolotl.*":
+          access_model: whitelist
 ```
