Add documentation on CORS header for XEP-0156 test

--- a/caas-web/src/main/resources/help/ejabberd/xep0156.md
+++ b/caas-web/src/main/resources/help/ejabberd/xep0156.md
@@ -1,1 +1,3 @@
 Look at the [Examples Section](https://xmpp.org/extensions/xep-0156.html#httpexamples) of XEP-0156 and create appropriate files for your server. Only one of `host-meta` and `host-meta.json` is required to pass this test. However it is recommended to create both.
+
+To pass this test the host-meta files should additionally have [`Access-Control-Allow-Origin: *`](https://xmpp.org/extensions/xep-0156.html#impl) response header so that the file contents can be read by web clients.
