XEP-0398 on ejabberd: add required mod_vcard_xupdate (#53)

--- a/caas-web/src/main/resources/help/ejabberd/xep0398.md
+++ b/caas-web/src/main/resources/help/ejabberd/xep0398.md
@@ -1,1 +1,8 @@
-* Configure mod_avatar
+* Add modules mod_avatar and mod_vcard_xupdate to modules list
+```
+modules:
+    ...
+    mod_avatar: {}
+    mod_vcard_xupdate: {}
+
+```
