--- a/caas-web/src/main/resources/help/prosody/xep0411.md
+++ b/caas-web/src/main/resources/help/prosody/xep0411.md
@@ -1,3 +1,3 @@
 * You need to upgrade to Prosody 0.11
-* Add the community module [mod\_bookmarks](mod_bookmarks)'
+* Add the community module [mod\_bookmarks](https://modules.prosody.im/mod_bookmarks)
 * To learn about how to install a community module, go to [installing modules documentation](https://prosody.im/doc/installing_modules)
