Update Prosody help text (#101)

--- a/caas-web/src/main/resources/help/prosody/xep0045.md
+++ b/caas-web/src/main/resources/help/prosody/xep0045.md
@@ -1,5 +1,6 @@
 * Make sure your server is v0.3+
 * Follow the instructions at [chat room documentation](https://prosody.im/doc/chatrooms)
 * If your chat rooms are not located directly as a subdomain of the server's primary
-domain, you should add a [disco\_items option](https://prosody.im/doc/modules/mod_disco).
+domain, you should add a [disco\_items option](https://prosody.im/doc/modules/mod_disco)
+to your virtual host that contains the domain of your MUC component.
 
