--- a/caas-web/src/main/resources/help/prosody/xep0352.md
+++ b/caas-web/src/main/resources/help/prosody/xep0352.md
@@ -1,6 +1,3 @@
-* Make sure your server has v0.9+
-* Add the community module [mod\_csi](https://modules.prosody.im/mod_csi).
-
-Note: This module does not come with default prosody installation.
-However, it can be set up by adding a community module.
-To learn about how to install a community module, go to [installing modules documentation](https://prosody.im/doc/installing_modules)
+* Make sure your server has v0.11+
+* Enable the core module [mod\_csi\_simple](https://modules.prosody.im/mod_csi_simple)
+(other [CSI modules](https://prosody.im/doc/modules/mod_csi) are also available).
