Update xep0357.md (#85)

--- a/caas-web/src/main/resources/help/openfire/xep0357.md
+++ b/caas-web/src/main/resources/help/openfire/xep0357.md
@@ -1,3 +1,1 @@
-<p style="color:red;">Currently unsupported</p>
-
-Development can be tracked in [https://issues.igniterealtime.org/browse/OF-1577](https://issues.igniterealtime.org/browse/OF-1577)
+Install the [Push Notification](https://www.igniterealtime.org/projects/openfire/plugin-archive.jsp?plugin=pushnotification) plugin.
